<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background_blue_secondary"
    android:layout_height="match_parent"
    tools:context=".TentangActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/LL1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/LL2">

                <TextView
                    android:id="@+id/txt_title_tentang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/str_lppm"
                    android:textSize="14dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:background="@drawable/background_gray_primary" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/LL1"
                app:layout_constraintBottom_toTopOf="@+id/LL3">

                <ImageView
                    android:id="@+id/img_ic"
                    android:layout_width="350dp"
                    android:layout_height="250dp"
                    android:foregroundGravity="center"
                    android:padding="10dp"
                    android:src="@drawable/gambaric" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/LL3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/LL2"
                app:layout_constraintBottom_toTopOf="@+id/LL4">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pengertian"
                    android:background="@drawable/background_gray_secondary"
                    android:padding="10dp"
                    android:textSize="12dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/LL5"
                app:layout_constraintBottom_toBottomOf="@+id/LL3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/visi_dan_misi"
                    android:textSize="14dp"
                    android:gravity="left"
                    android:textStyle="bold"
                    android:background="@drawable/background_gray_primary" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:layout_constraintBottom_toTopOf="@+id/LL6"
                app:layout_constraintBottom_toBottomOf="@+id/LL4">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/isi_visi_misi"
                    android:background="@drawable/background_gray_secondary"
                    android:padding="10dp"
                    android:textSize="12dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/LL7"
                app:layout_constraintBottom_toBottomOf="@+id/LL5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/struktur_organisasi"
                    android:textSize="14dp"
                    android:gravity="left"
                    android:textStyle="bold"
                    android:background="@drawable/background_gray_primary" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:layout_constraintBottom_toTopOf="@+id/LL8"
                app:layout_constraintBottom_toBottomOf="@+id/LL6">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/nama_struktur"
                    android:background="@drawable/background_gray_secondary"
                    android:padding="10dp"
                    android:textSize="12dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/LL9"
                app:layout_constraintBottom_toBottomOf="@+id/LL7">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/alamat"
                    android:textSize="14dp"
                    android:gravity="left"
                    android:textStyle="bold"
                    android:background="@drawable/background_gray_primary" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:layout_constraintBottom_toTopOf="@+id/LL10"
                app:layout_constraintBottom_toBottomOf="@+id/LL8">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/isi_alamat"
                    android:background="@drawable/background_gray_secondary"
                    android:padding="10dp"
                    android:textSize="12dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL10"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingTop="5dp"
                android:background="@drawable/background_copyright"
                android:weightSum="2"
                app:layout_constraintBottom_toBottomOf="@+id/LL8">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textColor="@color/whitePrimary"
                        android:text="Copyright © 2019 by "
                        android:textSize="12dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/txt_copyright"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/whitePrimary"
                        android:gravity="left"
                        android:text="LPPM UIN SUSKA RIAU"
                        android:textSize="12dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>