<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:weightSum="2"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="LPPM "
                        android:gravity="right"
                        android:textSize="25dp"
                        android:textColor="@color/blackPrimary"
                        android:fontFamily="@font/mmedium"
                        android:textStyle="bold"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=" ADMIN"
                        android:gravity="left"
                        android:textSize="25dp"
                        android:textColor="@color/bluePrimary"
                        android:fontFamily="@font/mmedium"
                        android:textStyle="bold"
                        />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/texrView3"
                android:layout_width="274dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="Welcome to Your Dashboard"
                android:textSize="28sp"
                android:textColor="@color/blackPrimary"
                android:fontFamily="@font/mmedium"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/linear1"/>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="43dp"
                android:background="@drawable/background_blue_primary"
                android:orientation="vertical"
                android:paddingTop="30dp"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                android:paddingBottom="30dp"
                app:layout_constraintTop_toBottomOf="@+id/texrView3"
                tools:layout_editor_absoluteX="0dp"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/mlight"
                        android:text="@string/username"
                        android:textColor="@color/blackPrimary"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/Edt_username"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/background_white_primary"
                        android:fontFamily="@font/mmedium"
                        android:hint="Enter Username"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingLeft="12dp"
                        android:textColor="@color/blackPrimary" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/mlight"
                        android:text="@string/password"
                        android:textColor="@color/blackPrimary"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/Edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:fontFamily="@font/mmedium"
                        android:hint="Enter Password"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:paddingLeft="12dp"
                        android:textColor="@color/blackPrimary"
                        android:background="@drawable/background_white_primary"/>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/btn_blue_secondary"
                    android:fontFamily="@font/mmedium"
                    android:text="@string/login"
                    android:textColor="#FFF"
                    android:textSize="20sp" />

            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>